---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assign_stmt_starred_expr_value.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..45,
        body: Suite {
            range: 0..45,
            node_index: NodeIndex(None),
            statements: [
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 0..9,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..1,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 4..9,
                                value: List(
                                    ExprList {
                                        node_index: NodeIndex(None),
                                        range: 5..9,
                                        elts: [
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 6..8,
                                                    value: Int(
                                                        42,
                                                    ),
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 10..19,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 10..11,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 14..19,
                                value: Set(
                                    ExprSet {
                                        node_index: NodeIndex(None),
                                        range: 15..19,
                                        elts: [
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 16..18,
                                                    value: Int(
                                                        42,
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 20..31,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 20..21,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 24..31,
                                value: Call(
                                    ExprCall {
                                        node_index: NodeIndex(None),
                                        range: 25..31,
                                        func: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 25..29,
                                                id: Name("list"),
                                                ctx: Load,
                                            },
                                        ),
                                        arguments: Arguments {
                                            range: 29..31,
                                            node_index: NodeIndex(None),
                                            args: [],
                                            keywords: [],
                                        },
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                ),
                Assign(
                    StmtAssign {
                        node_index: NodeIndex(None),
                        range: 32..44,
                        targets: [
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 32..33,
                                    id: Name("_"),
                                    ctx: Store,
                                },
                            ),
                        ],
                        value: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 36..44,
                                value: BinOp(
                                    ExprBinOp {
                                        node_index: NodeIndex(None),
                                        range: 38..43,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 38..39,
                                                id: Name("p"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 42..43,
                                                id: Name("q"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Semantic Syntax Errors

  |
1 | _ = *[42]
  |     ^^^^^ Syntax Error: Starred expression cannot be used here
2 | _ = *{42}
3 | _ = *list()
  |


  |
1 | _ = *[42]
2 | _ = *{42}
  |     ^^^^^ Syntax Error: Starred expression cannot be used here
3 | _ = *list()
4 | _ = *(p + q)
  |


  |
1 | _ = *[42]
2 | _ = *{42}
3 | _ = *list()
  |     ^^^^^^^ Syntax Error: Starred expression cannot be used here
4 | _ = *(p + q)
  |


  |
2 | _ = *{42}
3 | _ = *list()
4 | _ = *(p + q)
  |     ^^^^^^^^ Syntax Error: Starred expression cannot be used here
  |
